--- a/src/app/lista/lista.page.html
+++ b/src/app/lista/lista.page.html
@@ -1,17 +1,23 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-
-<ion-buttons slot="start">
+    <ion-buttons slot="start">
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
+    <ion-title>Lista</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Categorias Tareas</ion-title>
+      <ion-title size="large">Lista Tarea</ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-button [routerLink]="['/lista']">Lista Categorias</ion-button> 
+<ion-list>
+   @for (lista of listas; track lista._id) {
+    <ion-item>
+    <ion-label><h2>{{lista.name}}</h2> Yellow</ion-label>
+  </ion-item>
+   }
+</ion-list>
 </ion-content>
