Categorias Ionic Pruebas

--- a/src/app/categorias/categorias.page.html
+++ b/src/app/categorias/categorias.page.html
@@ -13,5 +13,5 @@
       <ion-title size="large">Categorias Tareas</ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-button [routerLink]="['/lista']">Lista Categorias</ion-button> 
+  <ion-button [routerLink]="['/lista']">Lista de productos</ion-button> 
 </ion-content>
