--- a/src/app/lista/lista.page.html
+++ b/src/app/lista/lista.page.html
@@ -1,8 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
-        <ion-menu-button></ion-menu-button>
-      </ion-buttons>
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>Lista</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -13,11 +13,22 @@
       <ion-title size="large">Lista Tarea</ion-title>
     </ion-toolbar>
   </ion-header>
-<ion-list>
-   @for (lista of listas; track lista._id) {
+ <ion-list-header>
+    <ion-label>Cetegorias en Oferta </ion-label>
+  </ion-list-header>
+  <ion-list>
+    @for (lista of listas; track lista._id) {
     <ion-item>
-    <ion-label><h2>{{lista.name}}</h2> Yellow</ion-label>
-  </ion-item>
-   }
-</ion-list>
+      <ion-thumbnail slot="start">
+        <img [alt]="lista.name" [src]="lista.image" />
+      </ion-thumbnail>
+
+      <ion-label>
+        <h2>{{lista.name}}</h2>
+        <p>{{lista.description}}</p>
+      </ion-label>
+
+    </ion-item>
+    }
+  </ion-list>
 </ion-content>
